Mods to add the C template.

--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "#%load_ext autoreload\n",
+    "#%autoreload 2"
    ]
   },
   {
@@ -45,11 +45,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- This tool provides Pegasus pipeline workflow templates which associates two simple workflow jobs to create a \"Hello World\" demonstration of Pegasus using an abstract YAML file and a cluster submission. This tool provides templates for workflow jobs written in `Bash`, `CPP`, `Fortran`, `MATLAB`, `Python` and `R`. The `Bash` template is selected by default.\n",
+    "- This tool provides Pegasus pipeline workflow templates which associates two simple workflow jobs to create a \"Hello World\" demonstration of Pegasus using an abstract YAML file and a cluster submission. This tool provides templates for workflow jobs written in `Bash`, `C`, `CPP`, `Fortran`, `MATLAB`, `Python` and `R`. The `Bash` template is selected by default.\n",
     "\n",
     "- These workflow jobs are executed on the University at Buffalo (UB)'s Center For Computational Research (CCR)'s generally accessible high performance compute cluster, UB-HPC, using Pegasus and submit!\n",
     "\n",
-    "- To start, enter a string of lunch items in the `Lunch Items` text box and click the `Launch Workflow` button. After you click the `Launch Workflow` button, the string of lunch items is saved to the file `f.a`. Pegasus transfers the `f.a` file, and, the workflow jobs for the selected template, from Ghub to UB-HPC. On UB-HPC, the first workflow job reads the `f.a` file and writes the received lunch items to the file `f.b`. When the first workflow job completes, the second workflow job reads the `f.b` file and writes a thank you greeting to the file `f.c`. When the second workflow job completes, Pegasus transfers the `f.c` file from UB-HPC to Ghub and the thank you greeting, contained in the `f.c` file, is displayed in the `View Workflow Results` section. See the `Give It a Try` and `View the Selected Template's Scripts and Source Code` sections for more information.\n",
+    "- To start, enter a string of lunch items in the `Lunch Items` text box and click the `Launch Workflow` button. After you click the `Launch Workflow` button, the string of lunch items is saved to the file `f.a`. Pegasus transfers the `f.a` file, and, the workflow jobs for the selected template, from Ghub to UB-HPC. On UB-HPC, the first workflow job reads the `f.a` file and writes the received lunch items to the file `f.b`. When the first workflow job completes, the second workflow job reads the `f.b` file and writes a thank you greeting to the file `f.c`. When the second workflow job completes, Pegasus transfers the `f.c` file from UB-HPC to Ghub and the thank you greeting, contained in the `f.c` file, is displayed in the `View Workflow Results` section. See the `Give It a Try` section to get started.\n",
     "\n",
     "- See the [CCR_Ghub_Demo](https://github.com/GhubGateway/CCR_Ghub_Demo) GitHub repository for a demonstation and templates for executing Pegasus WMS workflow jobs in parallel on UB-HPC.\n"
    ]
@@ -308,7 +308,9 @@
     "## Give It a Try [&#8607;](#userguide)\n",
     "\n",
     "<a name=\"select_template\"></a>\n",
-    "### Select the Template for the Workflow Jobs [&#8607;](#userguide)\n"
+    "### Select the Template for the Workflow Jobs [&#8607;](#userguide)\n",
+    "\n",
+    "- See the `View the Selected Template's Scripts and Source Code` section to view the scripts and source code for the selected template.\n"
    ]
   },
   {
@@ -377,7 +379,9 @@
     "        wfjob1_source_code_download_button_output.clear_output()\n",
     "        wfjob2_source_code_file_output.clear_output()\n",
     "        wfjob2_source_code_download_button_output.clear_output()\n",
-    "       \n",
+    "        workflow_yaml_file_output.clear_output()\n",
+    "        show_workflow_yaml_button.disabled = True\n",
+    "      \n",
     "        if cfg.BIN1_LIST[Selected_Template_Index] != None:\n",
     "\n",
     "            # If running the installed version of the notebook\n",
@@ -411,7 +415,8 @@
     "        show_launch_script_button.description = 'Show %s' %Launch_Script_Descr_P.value.decode()\n",
     "        show_wfjob1_source_code_button.description = 'Show %s' %WFJob1_Source_Code_Descr_P.value.decode()\n",
     "        show_wfjob2_source_code_button.description = 'Show %s' %WFJob2_Source_Code_Descr_P.value.decode()\n",
-    "        \n",
+    "        show_workflow_yaml_button.description = 'Show %s' %Workflow_YAML_Descr_P.value.decode()\n",
+    "\n",
     "        Build_Script_Filepath_P.value = os.path.join(self_tooldir, 'remotebin', Selected_Template, '%s_Build.sh' %Selected_Template).encode()\n",
     "        Launch_Script_Filepath_P.value = os.path.join(self_tooldir, 'remotebin', Selected_Template, '%s_Launch.sh' %Selected_Template).encode()\n",
     "        WFJob1_Source_Code_Filepath_P.value = os.path.join(self_tooldir, 'src', Selected_Template, cfg.SRC1_LIST[Selected_Template_Index]).encode()\n",
@@ -487,13 +492,13 @@
     "<a name=\"build_workflow_executables\"></a>\n",
     "### Build the Workflow Executables [&#8607;](#userguide)\n",
     "\n",
-    "- Click the `Build Workflow Executables` button to build the binary executables for the CPP, Fortran and MATLAB templates.\n",
+    "- Click the `Build Workflow Executables` button to build the binary executables for the `C`, `CPP`, `Fortran` and `MATLAB` templates.\n",
     "\n",
     "- The returned binary executables are copied to this tool's bin directory.\n",
     "\n",
     "- You will only need to click the `Build Workflow Executables` button when binary executables are required for new or updated sources files.\n",
     "\n",
-    "- The `Build Workflow Executables` button is disabled when this notebook is launched from the Ghub desktop. Otherwise, the `Build Workflow Executables` button is enabled when the CPP, Fortran or MATLAB template is selected.  See the `Build Scripts` section for more information.\n",
+    "- The `Build Workflow Executables` button is disabled when this notebook is launched from the Ghub desktop. Otherwise, the `Build Workflow Executables` button is enabled when the `C`, `CPP`, `Fortran` or `MATLAB` template is selected.  See the `Build Scripts` section for more information.\n",
     "\n",
     "- You will receive an email when the workflow completes.\n",
     "\n",
@@ -629,7 +634,7 @@
     "\n",
     "- Click the `Launch Workflow` button to launch the workflow for the selected template.  See the `Launch Scripts and Source Code` section for more information.\n",
     "\n",
-    "- The CPP, Fortran and MATLAB templates require binary executables built on CCR to exist in this tool's bin directory. If the required binary executables are not found, the `Launch Workflow` button is disabled. See the `Build the Workflow Executables` section for more information.\n",
+    "- The `C`, `CPP`, `Fortran` and `MATLAB` templates require binary executables built on CCR to exist in this tool's bin directory. If the required binary executables are not found, the `Launch Workflow` button is disabled. See the `Build the Workflow Executables` section for more information.\n",
     "\n",
     "- You will receive an email when the workflow completes.\n",
     "\n",
@@ -686,6 +691,7 @@
     "                    (Selected_Template_Index, self_user, lunch_items)\n",
     "                #print ('launch wrapper: ', wrapper)\n",
     "                returnCode = wrapper.run_workflow()\n",
+    "                show_workflow_yaml_button.disabled = False\n",
     "                \n",
     "                log_status (workflow_progress, '\\nWorkflow elapsed time: ' + str((time.time() - start_time)/60.0) + ' minutes\\n')\n",
     "                \n",
@@ -704,7 +710,7 @@
     "                            print('\\n')\n",
     "                            f = open(workflow_results_filepath,'r')\n",
     "                            for line in f:\n",
-    "                                print(line.rstrip())\n",
+    "                                log_success(workflow_results, line.rstrip())\n",
     "                            f.close()\n",
     "                            print('\\n')\n",
     "\n",
@@ -1173,7 +1179,7 @@
    "outputs": [],
    "source": [
     "show_workflow_yaml_button, workflow_yaml_file_output, workflow_yaml_download_button_output = \\\n",
-    "    show_file_output_button (Workflow_YAML_Descr_P, Workflow_YAML_Filepath_P, False)"
+    "    show_file_output_button (Workflow_YAML_Descr_P, Workflow_YAML_Filepath_P, True)"
    ]
   },
   {
@@ -1183,9 +1189,9 @@
     "<a name=\"show_build_scripts\"></a>\n",
     "### Build Scripts [&#8607;](#userguide)\n",
     " \n",
-    "When the `Build Workflow Executables` button is clicked, the build_wrapper Python script's BuildWrapper class is instantiated to plan and start a Pegasus workflow to build the required binary executables. Processing is similar to the LaunchWrapper class's processing, see the `Launch Scripts and Source Code` section for more information.\n",
+    "When the `Build Workflow Executables` button is clicked, the build_wrapper Python script's BuildWrapper class is instantiated to plan and start a Pegasus workflow to build the required binary executables for the selected `C`, `CCP`, `Fortran` or `MATLAB` template. Processing is similar to the LaunchWrapper class's processing, see the `Launch Scripts and Source Code` section for more information.\n",
     "\n",
-    "CPP and Fortran binary executables are built on CCR using the gcc compiler. MATLAB binary executables are built on CCR using the mcc compiler and in compliance with the current CCR MATLAB License. For provenance tracking, the compiled binary executables are retained in this tool's bin directory. \n",
+    "`C`, `CPP` and `Fortran` binary executables are built on CCR using the gcc compiler. MATLAB binary executables are built on CCR using the mcc compiler and in compliance with the current CCR MATLAB License. For provenance tracking, the compiled binary executables are retained in this tool's bin directory. \n",
     "\n",
     "As noted in the `Build the Workflow Executables` section, the `Build Workflow Executables` button is disabled when this notebook is launched from the Ghub desktop. Functionality is retained as a guideline. See the `Create Your Pegasus WMS Workflow Tool` section for more information."
    ]
@@ -1235,7 +1241,7 @@
     "def log_success (output_widget, message):\n",
     "    \n",
     "    with output_widget:\n",
-    "        print ('%s%s%s' %(SUCCESS,message,END))\n",
+    "        print ('%s%s%s%s%s' %(BOLD,SUCCESS,message,END,END))\n",
     "    log_info (message)\n",
     "    \n",
     "def log_warning (output_widget, message):\n",
@@ -1271,7 +1277,6 @@
     "    show_launch_script_button.disabled = True\n",
     "    show_wfjob1_source_code_button.disabled = True\n",
     "    show_wfjob2_source_code_button.disabled = True\n",
-    "    show_workflow_yaml_button.disabled = True\n",
     "    build_workflow_button.disabled = True\n",
     "    launch_workflow_button.disabled = True\n",
     "    \n",
@@ -1288,7 +1293,6 @@
     "    show_launch_script_button.disabled = False\n",
     "    show_wfjob1_source_code_button.disabled = False\n",
     "    show_wfjob2_source_code_button.disabled = False\n",
-    "    show_workflow_yaml_button.disabled = False\n",
     "    build_workflow_button.disabled = build_workflow_button_disabled\n",
     "    launch_workflow_button.disabled = launch_workflow_disabled()\n"
    ]
