--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -1189,7 +1189,7 @@
     "<a name=\"show_build_scripts\"></a>\n",
     "### Build Scripts [&#8607;](#userguide)\n",
     " \n",
-    "When the `Build Workflow Executables` button is clicked, the build_wrapper Python script's BuildWrapper class is instantiated to plan and start a Pegasus workflow to build the required binary executables for the selected `C`, `CCP`, `Fortran` or `MATLAB` template. Processing is similar to the LaunchWrapper class's processing, see the `Launch Scripts and Source Code` section for more information.\n",
+    "When the `Build Workflow Executables` button is clicked, the build_wrapper Python script's BuildWrapper class is instantiated to plan and start a Pegasus workflow to build the required binary executables for the selected `C`, `CPP`, `Fortran` or `MATLAB` template. Processing is similar to the LaunchWrapper class's processing, see the `Launch Scripts and Source Code` section for more information.\n",
     "\n",
     "`C`, `CPP` and `Fortran` binary executables are built on CCR using the gcc compiler. MATLAB binary executables are built on CCR using the mcc compiler and in compliance with the current CCR MATLAB License. For provenance tracking, the compiled binary executables are retained in this tool's bin directory. \n",
     "\n",
@@ -1399,7 +1399,7 @@
     "\n",
     "- Follow the instructions on the [Create New Tool](https://theGhub.org/tools/create) web page.  Enter a name for your tool, referred to as `<your tool name>` in this document. Select the Publishing Option, Jupyter Notebook. \n",
     "    \n",
-    "- When you create your tool on Ghub, the tool's repository is automatically created using [Hub Tool Directory Structure](https://theghub.org/kb/development/directorystructure) guidelines when your tool is created with the `Host GIT repository on HUB` or `Host subversion repository on HUB` Repository Hosts. When your tool is created with the `Host GIT repository on Github, Gitlab, etc.` Repository Host, please follow the recommended directory structure for your Git Repository.\n",
+    "- When your tool is created with the `Host GIT repository on HUB` or `Host subversion repository on HUB` Repository Host, the tool's repository is automatically created using [Hub Tool Directory Structure](https://theghub.org/kb/development/directorystructure) guidelines. When your tool is created with the `Host GIT repository on Github, Gitlab, etc.` Repository Host, please follow the recommended directory structure for your Git Repository.\n",
     "    \n",
     "- For Pegasus workflow tools, the rappture directory is obsolete and a remotebin directory is required.\n",
     "\n",
@@ -1412,13 +1412,15 @@
     "\n",
     "- It is assumed the main directory of your tool's repository contains your tool's landing page Jupyter Notebook, `<your tool name>.ipynb`.\n",
     "\n",
-    "- Launch the Jupyter Notebooks (202210) tool from the Ghub Dashboard's My Tools component and open `<your tool name>.ipynb`. Update `<your tool name>.ipynb` as required for your tool. Save your notebook updates and click the `Appmode` button to see how your notebook will display in Appmode. While in Appmode, click the `Edit App` button to return to the editor.\n",
+    "- Launch the Jupyter Notebooks (202210) tool from the Ghub Dashboard's My Tools component and open `<your tool name>.ipynb`.\n",
     "\n",
-    "- Using the template files as a guideline, update add / update files in `<your tool name>/bin`, `<your tool name>/src` and `<your tool name>/remotebin` directories as required for your tool.\n",
+    "- Using the template files as a guideline, update `<your tool name>.ipynb` and add / update files in the `<your tool name>/bin`, `<your tool name>/src` and `<your tool name>/remotebin` directories as required for your tool.\n",
     "\n",
     "    - Replace -u anaconda-X with -u anaconda-7 in the `<your tool name>/middleware/invoke` script.\n",
     "    \n",
-    "- Test your tool's updates. \n",
+    "- Save and test your tool's updates.\n",
+    "\n",
+    "- Click the `Appmode` button to see how `<your tool name>.ipynb` will display in Appmode. While in Appmode, click the `Edit App` button to return to the editor.\n",
     "\n",
     "- Commit the your tool's updates to your tool's repository.\n",
     "\n",
