Mods to set the ./middleware/invoke script executable bits.

--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -1401,15 +1401,17 @@
     "\n",
     "- Launch the Workspace 10 Tool from the Ghub Dashboard's My Tools component, and in an xterm terminal window, git, svn, or clone the files from your tool's repository.\n",
     "\n",
-    "- It is assumed the main directory of your tool's repository contains your tool's landing page, Jupyter Notebook, **your tool name**.ipynb.\n",
+    "- It is assumed the main directory of your tool's repository contains your tool's landing page Jupyter Notebook, **your tool name**.ipynb.\n",
     "\n",
-    "- Launch the Jupyter Notebooks (202210) tool from the Ghub Dashboard's My Tools component and open **your tool name**.ipynb.\n",
+    "- Launch the Jupyter Notebooks (202210) tool from the Ghub Dashboard's My Tools component, and open **your tool name**.ipynb.\n",
     "\n",
     "- Using the template files as a guideline, update **your tool name**.ipynb and add / update files in the **your tool name**/bin, **your tool name**/middleware, and **your tool name**/remotebin directories as required for your tool.\n",
     "\n",
-    "    - Replace -u anaconda-X with -u anaconda-7 in the **your tool name**/middleware/invoke script.\n",
+    "    - Verify that the **your tool name**/middleware/invoke script references **your tool name**, -t **your tool name**. Replace -u anaconda-X with -u anaconda-7 in the invoke script. The invoke script must have the executable file permission bits set.\n",
     "    \n",
     "    - Scripts, source code, and created binary executables should be stored in the **your tool name**/bin directory; for installed and published versions of your tool, users do not have read access to your tool's src directory.\n",
+    "    \n",
+    "    - Bash scripts in the **your tool name**/remotebin directory must have the executable file permission bits set.\n",
     "    \n",
     "- Save and test your tool's updates.\n",
     "\n",
