Mods to the documentation.

--- a/ghubex1.ipynb
+++ b/ghubex1.ipynb
@@ -1189,7 +1189,7 @@
     " \n",
     "When the `Build Workflow Executables` button is clicked, the `Build Wrapper` Python script's BuildWrapper class is instantiated to plan and start a Pegasus workflow to build the required binary executables for the selected `C`, `CPP`, `Fortran` or `MATLAB` template. Processing is similar to the LaunchWrapper class, see the `Launch Scripts and Source Code` section for more information.\n",
     "\n",
-    "`C`, `CPP` and `Fortran` binary executables are built on CCR using the gcc compiler. MATLAB binary executables are built on CCR using the mcc compiler and in compliance with the current CCR MATLAB License. For provenance tracking, the compiled binary executables are retained in this tool's bin directory. \n",
+    "`C` and `CPP` binary executables are built on CCR using the gcc compiler. `Fortran` binary executables are built on CCR using the gfortran compiler. MATLAB binary executables are built on CCR using the mcc compiler and in compliance with the current CCR MATLAB License. For provenance tracking, the compiled binary executables are retained in this tool's bin directory. \n",
     "\n",
     "As noted in the `Build the Workflow Executables` section, the `Build Workflow Executables` button is disabled when this notebook is launched from the Ghub desktop. Functionality is retained as a guideline. See the `Create Your Pegasus WMS Workflow Tool` section for more information."
    ]
